# flair-api

./: .gitignore  Makefile  README.md  pyproject.toml
flair-client/: api.py  client.py
flair_api/: __init__.py  flair_client.py
tests/: test_flair.py  test_flair_api.py
