[tool.poetry]
name = "flair-client"
version = "0.1.0"
license = "Apache-2.0"
description = "Client for Flair Systems API"
authors = ["insertdead <mdsc0111@tuta.io>"]
readme = "README.md"
repository = "https://github.com/insertdead/flair_api"

[tool.poetry.dependencies]
python = "^3.9"
aiohttp = "^3.7.2"
aiodns = "^2.0.0"
cchardet = "^2.1.7"
pylint = "^2.8.2"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
black = "^20.8b1"
isort = "^5.8.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
profile = "black"
multi_line_output = 3
