[tool.poetry]
name = "flair_api"
version = "0.1.0"
description = ""
authors = ["insertdead <mdsc0111@tuta.io>"]

[tool.poetry.dependencies]
python = "^3.8"
aiohttp = "^3.7.4"

[tool.poetry.dev-dependencies]
isort = "^5.9.1"
black = "^21.6b0"
pylint = "^2.9.6"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
